# warno-actual

./: .gitignore  AGENTS.md  CHECKSUM_CACHING_DESIGN.md  HelicopterMovementWeights_new.ndf  PROJECT_CONTEXT.md  README.md  UISpecificShowRoomComponentBase.ndf  UISpecificShowRoomComponentBase_old.ndf  UISpecificUnitInfoSingleWeaponPanelView.ndf  US-div-rules.cs  US-div-rules.csv  WeaponTraits.ndf  _apply_cv_cmd_tags.py  ammunitions.json  converter.py  damage_resistance_analysis_vanilla_20260709_012539.csv  gen_guids_for_new_unit.py  merged_edits.json  missiles.json  ndf_parse-0.2.1-py3-none-any.whl  output.txt  patcher_cli.py  pyproject.toml  recreateMods.py  regenerate_mods.py  requirements.txt  reverse_divisionrules.py  run_arc_preview.py  run_bat.py  run_damage_parser.py  run_dpm_visualizer.py  run_fx_editor.py  run_patcher.py  run_patcher_with_bat.py  warno-actual.code-workspace
assets/: README.md
config/: config.YAML  config.py  config.template.YAML  config_README.md  config_loader.py
docs/: HandlingConcatenatedObjects.md  TODO.md  UI_descriptor_reference.md  UI_vip_migration_plan.md  aircraft-multi-turret-supply.md  depiction_codegen.md  onboarding.md
notes/: TODO.md
src/: __init__.py  editors.py  gameplay_mod.py  main.py  ui_mod.py  unit_edits.py  utils.py
testing/: parse_damageresistance.py  randomstring.py  test_air_rocket_platform.py  test_aircraft_vision_validation.py  test_ammo_consumption_validation.py  test_ammo_data.py  test_atgm_infantry_team_strength.py  test_clu_bomb_dispersion.py  test_commander_capacite_pattern.py  test_default_multi_decks.py  (+20 more)
(+761 files in other folders)
