[project]
name = "warno-actual"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "ndf-parse==0.3.1",
    "tree-sitter==0.20.4",
    "requests==2.32.4",
]
[tool.setuptools.packages.find]
where = ["src"]
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"
line-length = 120 